Fixing spacing hamburger menu

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ nav>ul {
 
 .navtoggle.responsive nav {
   display: inline-block;;
-  width: 88px;
+  width: 100px;
   right: 24px;
   height: 100px;
   line-height: 2;
